<resources>
    <string name="app_name">Melodify</string>

    <string name="menu_home">Home</string>
    <string name="menu_all_songs">All Songs</string>
    <string name="menu_featured_songs">Featured Songs</string>
    <string name="menu_popular_songs">Popular Songs</string>
    <string name="menu_new_songs">New Songs</string>
    <string name="menu_favorite_songs">Favorite Songs</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_language">Language</string>

    <string name="play_all">Play all</string>
    <string name="view_all">View all</string>
    <string name="music_player">Music Player</string>
    <string name="views">Views</string>
    <string name="label_start_time">00:00</string>
    <string name="label_add_song">Add Song</string>
    <string name="label_update_song">Update Song</string>

    // action
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    // Validate
    <string name="name_require">Please enter your name</string>
    <string name="comment_require">Please enter your comment</string>

    // Hint
    <string name="hint_search_name">Song name…</string>

    // Label
    <string name="label_artist">Artist:</string>

    // Message
    <string name="msg_please_waiting">Please wait…</string>
    <string name="msg_send_feedback_success">Send feedback successfully!</string>
    <string name="msg_exit_app">Are you sure you want to exit?</string>
    <string name="msg_get_date_error">General error, please try again later</string>

    // Module user
    <string name="hint_email">Email…</string>
    <string name="hint_password">Password…</string>
    <string name="hint_password_old">Old password…</string>
    <string name="hint_password_new">New password…</string>
    <string name="hint_password_confirm">Confirm new password…</string>

    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Already have an account?</string>
    <string name="have_not_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign Out</string>
    <string name="reset_password">Reset password</string>

    <string name="msg_email_require">Please enter your email</string>
    <string name="msg_password_require">Please enter your password</string>
    <string name="msg_email_invalid">Your email is invalid</string>
    <string name="msg_email_invalid_admin">Emails for admin need the format …@admin.com</string>
    <string name="msg_email_invalid_user">Wrong email format for user</string>

    <string name="msg_old_password_require">Please enter old password</string>
    <string name="msg_new_password_require">Please enter new password</string>
    <string name="msg_confirm_password_require">Please enter confirm new password</string>
    <string name="msg_old_password_invalid">Old password is incorrect</string>
    <string name="msg_confirm_password_invalid">Confirm new password does not match</string>
    <string name="msg_new_password_invalid">The new password is the same as the old password</string>

    <string name="msg_change_password_successfully">Change password successfully</string>
    <string name="msg_reset_password_successfully">Password reset is successful, please check your email</string>

    <string name="msg_sign_up_error">Registration failed, please try again</string>
    <string name="msg_sign_in_error">Login failed, please try again</string>

    <string name="song_name">Name(*)</string>
    <string name="song_artist">Artist(*)</string>
    <string name="song_image">Image(*)</string>
    <string name="song_link_url">Link url(*)</string>
    <string name="song_featured">Featured</string>
    <string name="song_latest">Latest</string>
    <string name="label_featured">Featured:</string>
    <string name="label_latest">Latest:</string>

    <string name="action_add">Add</string>
    <string name="action_edit">Update</string>

    <string name="msg_delete_title">Confirm delete</string>
    <string name="msg_confirm_delete">Are you sure you want to delete this item?</string>
    <string name="msg_delete_movie_successfully">Delete song successfully</string>
    <string name="msg_name_song_require">Please enter the name</string>
    <string name="msg_artist_song_require">Please enter the artist</string>
    <string name="msg_image_song_require">Please enter the image</string>
    <string name="msg_link_song_require">Please enter the link url</string>
    <string name="msg_edit_song_success">Update song successfully</string>
    <string name="msg_add_song_success">Add song successfully</string>

    <string name="label_facebook">Facebook</string>
    <string name="label_call">Call Phone</string>
    <string name="label_gmail">Gmail</string>
    <string name="label_skype">Skype</string>
    <string name="label_youtube">Youtube</string>
    <string name="label_zalo">Zalo</string>

    <string name="download_modal">Do you want to download this song?</string>
    <string name="download_no">No</string>
    <string name="download_yes">Yes</string>
    <string name="download_notification">Download</string>
    <string name="not_downloaded">You need to download this song first</string>
    <string name="sharing">Check out this song on Melodify!</string>

    <string name="feedback_name">Full name (*)</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_phone">Phone number</string>
    <string name="feedback_comment">Comment (*)</string>
    <string name="send_feedback">Send Feedback</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>