<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="Autofill" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/define_dimen_150"
        android:layout_height="@dimen/define_dimen_150"
        android:src="@drawable/img_splash"
        app:civ_border_color="@color/yellow"
        app:civ_border_width="2dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/define_dimen_50" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_xnormal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_30"
            android:background="@drawable/bg_main_corner_8"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:padding="@dimen/define_dimen_10"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/define_dimen_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_not_account"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/define_dimen_6"
            android:text="@string/sign_up"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>
</RelativeLayout>