<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:layout_marginEnd="-65dp"
    android:orientation="horizontal"
    android:focusable="true"
    android:clickable="true"
    tools:ignore="UseCompatTextViewDrawableXml" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/layout_close"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/define_dimen_14"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/define_dimen_50"
                android:layout_height="@dimen/define_dimen_50"
                android:src="@drawable/ic_avatar_default"/>

            <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="@dimen/define_dimen_5"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_overlay"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_menu_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/define_dimen_14"
                    android:text="@string/menu_home"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_menu_home"
                    android:drawablePadding="@dimen/define_dimen_10"
                    android:textSize="@dimen/text_size_normal" />

                <LinearLayout
                    android:id="@+id/layout_list_song"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_menu_all_songs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/define_dimen_14"
                        android:text="@string/menu_all_songs"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_menu_all_song"
                        android:drawablePadding="@dimen/define_dimen_10"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:id="@+id/tv_menu_featured_songs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/define_dimen_14"
                        android:text="@string/menu_featured_songs"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_menu_featured_song"
                        android:drawablePadding="@dimen/define_dimen_10"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:id="@+id/tv_menu_popular_songs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/define_dimen_14"
                        android:text="@string/menu_popular_songs"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_menu_popular_song"
                        android:drawablePadding="@dimen/define_dimen_10"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:id="@+id/tv_menu_new_songs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/define_dimen_14"
                        android:text="@string/menu_new_songs"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_menu_new_song"
                        android:drawablePadding="@dimen/define_dimen_10"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:id="@+id/tv_menu_favorite_songs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/define_dimen_14"
                        android:text="@string/menu_favorite_songs"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_menu_favorite_song"
                        android:drawablePadding="@dimen/define_dimen_10"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:id="@+id/tv_menu_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/define_dimen_14"
                        android:text="@string/menu_contact"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_menu_contact"
                        android:drawablePadding="@dimen/define_dimen_10"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_menu_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/define_dimen_14"
                    android:text="@string/menu_feedback"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_menu_feedback"
                    android:drawablePadding="@dimen/define_dimen_10"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_menu_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/define_dimen_14"
                    android:text="@string/menu_change_password"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_menu_change_password"
                    android:drawablePadding="@dimen/define_dimen_10"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_menu_sign_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/define_dimen_14"
                    android:text="@string/menu_sign_out"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_menu_sign_out"
                    android:drawablePadding="@dimen/define_dimen_10"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_close"
        android:layout_width="65dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@color/tran_parent">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_12"
            android:src="@drawable/ic_close_white"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

</RelativeLayout>
