<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/define_dimen_10"
    android:layout_marginEnd="@dimen/define_dimen_10"
    android:layout_marginStart="1dp"
    android:layout_marginBottom="1dp"
    android:elevation="1dp">

    <RelativeLayout
        android:id="@+id/layout_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/define_dimen_5">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/define_dimen_6">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/define_dimen_80">

                <ImageView
                    android:id="@+id/img_song"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_no_available"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/define_dimen_5"
            android:layout_marginEnd="@dimen/define_dimen_5"
            android:layout_toEndOf="@+id/layout_image"
            android:layout_toStartOf="@+id/layout_button"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_2"
                android:text="@string/app_name"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_featured"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/text_size_xsmall" />

                <TextView
                    android:id="@+id/tv_featured"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/define_dimen_5"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_xsmall" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_latest"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/text_size_xsmall" />

                <TextView
                    android:id="@+id/tv_latest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/define_dimen_5"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_xsmall" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/define_dimen_5"
                android:src="@drawable/ic_edit"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/img_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:padding="@dimen/define_dimen_5"
                android:src="@drawable/ic_delete"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>

